# Machine-Learning-with-Python-and-C--

./: Planning.xlsx  mds_trial.py
01 - Perceptron/01-Python/: sentiment_algorithms.py  sentiment_main.py  sentiment_preprocessing.py  sentiment_test.tsv  sentiment_train.tsv  sentiment_visualization.py  stopwords.txt  toy.csv
01 - Perceptron/02 - Cpp/: CMakeLists.txt
01 - Perceptron/02 - Cpp perceptron/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
01 - Perceptron/02 - Cpp perceptron/apps/: algorithms.cpp  main.cpp  preprocessing.cpp  read_data.cpp
01 - Perceptron/02 - Cpp perceptron/data/: toy.csv
01 - Perceptron/02 - Cpp perceptron/include/: algorithms.h  read_data.h
01 - Perceptron/02 - Cpp/apps/: main.cpp  preprocessing.cpp  read_data.cpp
01 - Perceptron/02 - Cpp/include/: preprocessing.h  read_data.h
01 - Perceptron/03 - Cpp  draft/: read_data.cpp  toys.cpp
01 - Perceptron/03 - Cpp  draft/apps/: preprocessing.cpp  read_data.cpp
01 - Perceptron/03- Cpp perceptron toy example/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
01 - Perceptron/03- Cpp perceptron toy example/apps/: algorithms.cpp  main.cpp  preprocessing.cpp  read_data.cpp
01 - Perceptron/03- Cpp perceptron toy example/data/: sentiment_test.tsv  sentiment_train.tsv
01 - Perceptron/03- Cpp perceptron toy example/include/: algorithms.h  read_data.h
02 - LinearRegression/00 -  Data/: turbine.csv
02 - LinearRegression/01 - Joint Distribution/: joint_distribution.py  joint_ditribution_visualization.py
02 - LinearRegression/02 - Linear Regression py/: linear_regression.py  trial.py
02 - LinearRegression/03 - Correlation coefficient py/: correlation coefficient.py
02 - LinearRegression/04 - Correlation coefficient cpp/: CMakeLists.txt
02 - LinearRegression/04 - Correlation coefficient cpp/app/: main.cpp  read_data.cpp
02 - LinearRegression/04 - Correlation coefficient cpp/data/: turbine.csv
02 - LinearRegression/04 - Correlation coefficient cpp/include/: read_data.h
02 - LinearRegression/05 - Regression/: regression.py  regression_visual.py
04 - Clustering/Data/: clusters.csv
04 - Clustering/Kmeans/: k_means.py  kmeans_make_data.py
05 - DimensionalityReduction/MDS/: mds_trial.py  smacof.py  smacof_2.py  utils.py
05 - DimensionalityReduction/MDS/Data/: mds_data.csv
05 - DimensionalityReduction/MDS/cpp/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  getData.cpp  main.cpp  trial.cpp
05 - DimensionalityReduction/MDS/cpp/apps/: getData.cpp  math.cpp  utils.cpp
05 - DimensionalityReduction/MDS/cpp/include/: getData.h  math.h  utils.h
05 - DimensionalityReduction/PCA/: Credit score.xlsx  PCA_explained.py  PCA_from_scratch.py  pca.py  utils.py
10 - Decision Trees/CART algoritm/example/: cart.py  driver.py  results.csv
10 - Decision Trees/CART algoritm/toy_exemple/: product_quality.csv  social_network.xlsx  toy_example.py
20 - TimeSeries/01-Classical/AR/: ar_model.py
20 - TimeSeries/01-Classical/MA/: ma_trial.py
20 - TimeSeries/02 - Change Point Detection/Pert/: bfb_data.csv  data.csv  pelt.py  pert_algo.py
DeepLearning/Layers/Convolution/: Convolution.py
